--- a/CSS/hojaClara.css
+++ b/CSS/hojaClara.css
@@ -28,31 +28,139 @@ legend {
   text-align: center;
   margin: auto;
 }
-#fotoperfil {
-  display: block;
-  width: 50pt;
-  max-width: 50pt;
-  height: 50pt;
-  max-height: 50pt;
-}
 
-.cajapost {
-  background-color: white;
-  padding: 5px;
-  width: 800px;
-  height: 200px;
-  border: 1px solid black;
-  margin: 10px;
-  border-radius: 6px;
-}
-
-.imagenpost {
-  width: 50px;
-  height: 50px;
-}
 .imagen {
   position: relative;
   margin-right: 0px;
   width: 50px;
   height: 50px;
+}
+
+#superiordiv {
+  height: 45%;
+  width: 90%;
+  background-color: white;
+  position: absolute;
+  margin-left: 4%;
+  top: 3%;
+}
+#interfaz {
+  height: 45%;
+  width: 90%;
+  background-color: black;
+  position: absolute;
+  margin-left: 4%;
+  bottom: 3%;
+}
+#manojugador {
+  position: absolute;
+  width: 65%;
+  left: 1%;
+  background-color: white;
+  height: 91%;
+  top: 5%;
+  border-radius: 5px;
+}
+#descripcioncarta {
+  position: absolute;
+  color: black;
+  width: 30%;
+  right: 1%;
+  background-color: pink;
+  height: 90%;
+  top: 5%;
+  border-radius: 10px;
+}
+
+.container {
+  width: 100%;
+  height: 95%;
+
+  /* Center the container in middle on horizontal axis */
+  margin-top: 0px;
+  top: 0px;
+
+  /* Add empty space above the container (20% of the view height) */
+
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 12px;
+
+  object-fit: cover;
+}
+
+.card {
+  /* Change background color */
+  background-color: white;
+
+  /* Add border */
+  border: 1px solid #bacdd8;
+
+  /* Add space between the border and the content */
+  padding: 8px;
+  margin-left: 1px;
+  margin-right: 1px;
+
+  border-radius: 12px;
+  max-height: 100%;
+}
+
+.tag {
+  padding: 4px 8px;
+  border: 1px solid #e5eaed;
+
+  border-radius: 50px;
+  font-size: 12px;
+  font-weight: 600;
+  color: #788697;
+}
+
+/* Style div elements that have class equal to name */
+.name {
+  font-size: 24px;
+  font-weight: 600;
+
+  margin-top: 16px;
+}
+
+/* Style p element */
+p {
+  font-size: 14px;
+  color: black;
+  line-height: 150%;
+  margin: 20px;
+}
+
+/* Style button element */
+button {
+  border: none;
+  padding: 12px 24px;
+  border-radius: 50px;
+
+  font-weight: 600;
+  color: #0077ff;
+  background-color: #e0efff;
+
+  /* Button is inline-block element by default, it need to have block display for margin: 0 auto; to work */
+  margin: 20px;
+  display: block;
+
+  /* Button is a clickable element, therefore it should have a pointer cursor */
+  cursor: pointer;
+}
+
+.card__details {
+  /* Add space around the details */
+  padding: 16px 8px 8px 8px;
+}
+
+#ronda {
+  position: absolute;
+  right: 15px;
+  top: 60px;
 }
