--- a/CSS/hojaClara.css
+++ b/CSS/hojaClara.css
@@ -75,13 +75,8 @@ legend {
 .container {
   width: 100%;
   height: 95%;
-
-  /* Center the container in middle on horizontal axis */
   margin-top: 0px;
   top: 0px;
-
-  /* Add empty space above the container (20% of the view height) */
-
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
@@ -90,22 +85,15 @@ img {
   max-width: 100%;
   max-height: 100%;
   border-radius: 12px;
-
   object-fit: cover;
 }
 
 .card {
-  /* Change background color */
   background-color: white;
-
-  /* Add border */
   border: 1px solid #bacdd8;
-
-  /* Add space between the border and the content */
   padding: 8px;
   margin-left: 1px;
   margin-right: 1px;
-
   border-radius: 12px;
   max-height: 100%;
 }
@@ -113,22 +101,18 @@ img {
 .tag {
   padding: 4px 8px;
   border: 1px solid #e5eaed;
-
   border-radius: 50px;
   font-size: 12px;
   font-weight: 600;
   color: #788697;
 }
 
-/* Style div elements that have class equal to name */
 .name {
   font-size: 24px;
   font-weight: 600;
-
   margin-top: 16px;
 }
 
-/* Style p element */
 p {
   font-size: 14px;
   color: black;
@@ -136,26 +120,19 @@ p {
   margin: 20px;
 }
 
-/* Style button element */
 button {
   border: none;
   padding: 12px 24px;
   border-radius: 50px;
-
   font-weight: 600;
   color: #0077ff;
   background-color: #e0efff;
-
-  /* Button is inline-block element by default, it need to have block display for margin: 0 auto; to work */
   margin: 20px;
   display: block;
-
-  /* Button is a clickable element, therefore it should have a pointer cursor */
   cursor: pointer;
 }
 
 .card__details {
-  /* Add space around the details */
   padding: 16px 8px 8px 8px;
 }
 
@@ -163,4 +140,13 @@ button {
   position: absolute;
   right: 15px;
   top: 60px;
+}
+
+#fotoheroe {
+  left: 0px;
+}
+
+#fotomalo {
+  position: absolute;
+  right: 50px;
 }
