--- a/CSS/hojaOscura.css
+++ b/CSS/hojaOscura.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(70, 100, 100);
+  background-color: rgb(52, 73, 58);
   color: white;
 }
 table,
@@ -149,4 +149,13 @@ button {
 #fotomalo {
   position: absolute;
   right: 50px;
+}
+#accionesenemigo {
+  position: absolute;
+  bottom: 2px;
+  left: 50%;
+  width: 250px;
+  height: 80px;
+  border-radius: 10px;
+  background-color: rgb(52, 73, 58);
 }
