--- a/CSS/hojaClara.css
+++ b/CSS/hojaClara.css
@@ -159,3 +159,17 @@ button {
   border-radius: 10px;
   background-color: rgb(111, 190, 128);
 }
+#fondo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+}
+#resultadodiv {
+  width: 640px; /* Can be in percentage also. */
+  height: 45%;
+  margin: auto;
+  padding: 10px;
+  position: relative;
+}
