--- a/CSS/hojamenu.css
+++ b/CSS/hojamenu.css
@@ -2,11 +2,8 @@
   overflow: hidden;
   width: auto;
   height: auto;
-  border-bottom: 1px solid black;
-  border-radius: 5px;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: right;
   color: #f2f2f2;
@@ -14,18 +11,14 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  border: 1px solid black;
-  margin: 1px;
+  margin-left: 1px;
   margin-bottom: 0px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  text-decoration: underline;
 }
 
-/* Add a color to the active/current link */
 .topnav a.active {
   background-color: #04aa6d;
   color: white;
@@ -39,4 +32,17 @@
 }
 .topnav p {
   display: inline;
+}
+
+#usuario {
+  text-align: center;
+  width: min-content;
+  height: 100%;
+  background-color: white;
+  border-radius: 20px;
+}
+#fotousuario {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
