--- a/CSS/hojaOscura.css
+++ b/CSS/hojaOscura.css
@@ -1,20 +1,27 @@
 body {
-  background-color: rgb(52, 73, 58);
+  background-color: rgb(54, 80, 61);
   color: white;
 }
+a {
+  color: white;
+}
+
 table,
 th,
 td {
   border: 1px solid black;
-  border-radius: 10px;
+  padding: 12px 15px;
+}
+th {
+  background-color: rgb(77, 77, 77);
+  color: white;
 }
 table {
   width: 100%;
+  border-collapse: collapse;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
-legend {
-  border: 1px solid black;
-  border-radius: 5px;
-}
+
 #caja {
   border: 1px solid black;
   border-radius: 5px;
@@ -158,7 +165,7 @@ button {
   width: 250px;
   height: 80px;
   border-radius: 10px;
-  background-color: rgb(52, 73, 58);
+  background-color: rgb(54, 80, 61);
   color: white;
 }
 #fondo {
@@ -169,7 +176,7 @@ button {
   left: 0px;
 }
 #resultadodiv {
-  width: 640px; /* Can be in percentage also. */
+  width: 640px;
   height: 45%;
   margin: auto;
   padding: 10px;
@@ -180,8 +187,10 @@ button {
   position: absolute;
   width: 70%;
   height: 300px;
-  top: 10%;
+  top: 20%;
   left: 15%;
+  border: 1px solid white;
+  border-radius: 10px;
 }
 #comenzar {
   position: absolute;
