--- a/CSS/hojamenu.css
+++ b/CSS/hojamenu.css
@@ -6,7 +6,7 @@
 
 .topnav a {
   float: right;
-  color: #f2f2f2;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -17,10 +17,10 @@
 
 .topnav a:hover {
   text-decoration: underline;
+  color: white;
 }
 
 .topnav a.active {
-  background-color: #04aa6d;
   color: white;
 }
 .topnav img {
