--- a/CSS/hojaOscura.css
+++ b/CSS/hojaOscura.css
@@ -1,9 +1,26 @@
 body {
-  background-color: rgb(54, 80, 61);
-  color: white;
+  background: linear-gradient(45deg, rgb(148, 66, 66), rgb(57, 57, 146));
+  background-size: 1100% 1100%;
+  color: black;
+  animation: cambiar 10s ease-in-out infinite;
+}
+@keyframes cambiar {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
 }
 a {
-  color: white;
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 table,
@@ -11,6 +28,7 @@ th,
 td {
   border: 1px solid black;
   padding: 12px 15px;
+  background-color: whitesmoke;
 }
 th {
   background-color: rgb(77, 77, 77);
@@ -22,6 +40,15 @@ table {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
+h2,
+h1,
+h3 {
+  color: white;
+}
+#enlaceresultados {
+  color: white;
+}
+
 #caja {
   border: 1px solid black;
   border-radius: 5px;
@@ -29,11 +56,13 @@ table {
 }
 
 #contenedorform {
+  background-color: whitesmoke;
   border: 1px solid black;
   border-radius: 10px;
   width: 40%;
   text-align: center;
   margin: auto;
+  padding-top: 10px;
 }
 
 .imagen {
@@ -184,13 +213,15 @@ button {
 }
 
 #contenedorindex {
+  background-color: whitesmoke;
   position: absolute;
   width: 70%;
   height: 300px;
   top: 20%;
   left: 15%;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 10px;
+  color: black;
 }
 #comenzar {
   position: absolute;
@@ -214,9 +245,11 @@ button {
   position: absolute;
   top: 0px;
   left: 30px;
+  color: black;
 }
 #labelmalo {
   position: absolute;
   top: 0px;
   right: 30px;
+  color: black;
 }
