--- a/CSS/hojamenu.css
+++ b/CSS/hojamenu.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   width: auto;
   height: auto;
-  background-color: white;
+  background-color: whitesmoke;
   border-radius: 20px;
   padding: 5px;
   margin-bottom: 5px;
@@ -32,7 +32,7 @@
   text-align: center;
   width: min-content;
   height: 100%;
-  background-color: white;
+  background-color: whitesmoke;
   border: 1px solid black;
   border-radius: 20px;
 }
